--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.datasource.password=user
 
 server.port=8080
 
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.orm.jpa=ERROR
+logging.level.org.springframework.transaction=ERROR
+logging.level.org.springframework.transaction.interceptor=ERROR
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=ERROR
 #---
 #spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
