--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -1,33 +1,24 @@
-logging.level.ru.practicum=debug
+server.port=8080
+statistic-server.url=http://localhost:9090
+spring.h2.console.enabled=true
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 
-spring.sql.init.mode=always
-
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/explore
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/explore-main
 spring.datasource.username=user
 spring.datasource.password=user
-#spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${POSTGRES_USER}
-#spring.datasource.password=${POSTGRES_PASSWORD}
+spring.sql.init.mode=always
 
-server.port=8080
-
-logging.level.org.springframework.orm.jpa=ERROR
-logging.level.org.springframework.transaction=ERROR
-logging.level.org.springframework.transaction.interceptor=ERROR
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=ERROR
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:shareit
-#spring.datasource.username=test
-#spring.datasource.password=test
-#
-#spring.h2.console.enabled=true
-#
-##ewm-stats-service.url=http://localhost:9090
-#ewm-stats-service.url=${EWM_STATS_SERVICE_URL}
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:explore-with-me
+spring.datasource.username=user
+spring.datasource.password=user
