feature: prepare for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "user"
 
-  explore-main-server:
+  ewm-service:
     build: ./main-server
     container_name: explore-main
     ports:
