feature: prepare for docker

--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.show_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/explore-main
+spring.datasource.url=jdbc:postgresql://localhost:5432/explore-main
 spring.datasource.username=user
 spring.datasource.password=user
 spring.sql.init.mode=always
