--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,8 @@ services:
     image: postgres:14-alpine
     container_name: explore-server-db
     ports:
-      - "5433:5432"
+      - "5433:5433"
     environment:
-      POSTGRES_DB: "explore-main"
+      POSTGRES_DB: "explore-main-db"
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "user"
