--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
-SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/explore-main
-spring.datasource.url=jdbc:postgresql://localhost:5432/explore-main
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5433/explore-main
+spring.datasource.url=jdbc:postgresql://localhost:5433/explore-main
 spring.datasource.username=user
 spring.datasource.password=user
 spring.sql.init.mode=always
@@ -17,9 +17,9 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-##---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:explore-with-me
-#spring.datasource.username=user
-#spring.datasource.password=user
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:explore-with-me
+spring.datasource.username=user
+spring.datasource.password=user
