--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - explore-stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://explore-stats-db:5432/explore-stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/explore-stats
 
   explore-stats-db:
     image: postgres:14-alpine
@@ -28,8 +28,8 @@ services:
     depends_on:
       - explore-main-db
     environment:
-      - STATISTIC_SERVER_URL=http://explore-stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://explore-main-db:5432/explore-main
+      - STATISTIC_SERVER_URL=http://localhost:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/explore-main-db
 
   explore-main-db:
     image: postgres:14-alpine
