--- a/stat-server/src/main/resources/application.properties
+++ b/stat-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:postgresql://explore-stats-db:5432/explore-stats
+spring.datasource.url=jdbc:postgresql://localhost:5432/explore-stats
 spring.datasource.username=user
 spring.datasource.password=user
 
