--- a/stat-server/src/main/resources/application.properties
+++ b/stat-server/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:postgresql://localhost:5432/explore-stats-db
+spring.datasource.url=jdbc:postgresql://localhost:5433/explore-stats-db
 spring.datasource.username=user
 spring.datasource.password=user
 
 server.port=9090
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:explore
-#spring.datasource.username=user
-#spring.datasource.password=user
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:explore
+spring.datasource.username=user
+spring.datasource.password=user
