--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,41 @@ version: '3.8'
 services:
   stats-server:
     build: ./stat-server
-    container_name: explore-stats
+    container_name: stats
     ports:
       - "9090:9090"
     depends_on:
-      - explore-stats-db
+      - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://explore-stats-db:5433/explore-stats-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
-  explore-stats-db:
+  stats-db:
     image: postgres:14-alpine
     container_name: stats-db
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
-      POSTGRES_DB: "explore-stats-db"
+      POSTGRES_DB: "stats-db"
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "user"
 
   ewm-service:
     build: ./main-server
-    container_name: explore-main
+    container_name: ewm-service
     ports:
       - "8080:8080"
     depends_on:
-      - explore-main-db
+      - ewm-db
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://explore-main-db:5432/explore-main-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
 
-  explore-main-db:
+  ewm-db:
     image: postgres:14-alpine
-    container_name: explore-server-db
+    container_name: ewm-service-db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
-      POSTGRES_DB: "explore-main-db"
+      POSTGRES_DB: "ewmservice"
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "user"
