--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
-SPRING_DATASOURCE_URL=jdbc:postgresql://explore-main-db:5432/explore-main-db
-spring.datasource.url=jdbc:postgresql://explore-main-db:5432/explore-main-db
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewmservice
 spring.datasource.username=user
 spring.datasource.password=user
 spring.sql.init.mode=always
