--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: ewm-service-db
+    container_name: ewm-db
     ports:
       - "5433:5432"
     environment:
