--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.show_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewmservice
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewmservice
 spring.datasource.username=user
 spring.datasource.password=user
 spring.sql.init.mode=always
