--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+      - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
@@ -16,7 +17,7 @@ services:
     image: postgres:14-alpine
     container_name: "ewm-db"
     ports:
-      - "5432:5432"
+      - "5532:5432"
     environment:
       POSTGRES_DB: "ewmservice"
       POSTGRES_USER: "user"
@@ -30,13 +31,13 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5433/stats-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
   stats-db:
     image: postgres:14-alpine
     container_name: "stats-db"
     ports:
-      - "5433:5433"
+      - "5633:5432"
     environment:
       POSTGRES_DB: "stats-db"
       POSTGRES_USER: "user"
