--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice?user=user&password=user&createDatabaseIfNotExist=true
 
   ewm-db:
     image: postgres:14-alpine
@@ -31,7 +31,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db?user=user&password=user&createDatabaseIfNotExist=true
 
   stats-db:
     image: postgres:14-alpine
