--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,17 @@ services:
       - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice?user=user&password=test&createDatabaseIfNotExist=true
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: "ewm-db"
+    container_name: ewm-db
     ports:
       - "6541:5432"
     environment:
       - POSTGRES_DB=ewmservice
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=user
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
 
   stats-server:
     build: ./stat-server
@@ -40,5 +40,5 @@ services:
       - "6542:5432"
     environment:
       - POSTGRES_DB=stats-db
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=user
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
