--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.hibernate.show_sql=true
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:6541/ewmservice
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=test
+spring.datasource.password=test
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
