feature: prepare for docker

--- a/main-server/Dockerfile
+++ b/main-server/Dockerfile
@@ -2,3 +2,5 @@ FROM amazoncorretto:11-alpine-jdk
 COPY target/*.jar app.jar
 #ENV TZ="Europe/Moscow"
 ENTRYPOINT ["java","-jar","/app.jar"]
+ENV POSTGRES_PASSWORD=test
+ENV POSTGRES_USER=test
