--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
       - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice?user=user&password=test&createDatabaseIfNotExist=true
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
 
   ewm-db:
     image: postgres:14-alpine
     container_name: ewm-db
     ports:
-      - "6541:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_DB=ewmservice
       - POSTGRES_USER=test
@@ -37,7 +37,7 @@ services:
     image: postgres:14-alpine
     container_name: "stats-db"
     ports:
-      - "6542:5432"
+      - "5432:5432"
     environment:
       - POSTGRES_DB=stats-db
       - POSTGRES_USER=test
