--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -21,5 +21,5 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:explore-with-me
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=test
+spring.datasource.password=test
