--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - POSTGRES_DB=ewmservice
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
+      POSTGRES_DB: "ewmservice"
+      POSTGRES_USER: "user"
+      POSTGRES_PASSWORD: "user"
 
   stats-server:
     build: ./stat-server
@@ -39,6 +39,6 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_DB=stats-db
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
+      POSTGRES_DB: "stats-db"
+      POSTGRES_USER: "user"
+      POSTGRES_PASSWORD: "user"
