--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.hibernate.show_sql=true
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewmservice
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=user
+spring.datasource.password=user
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
@@ -21,5 +21,5 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:explore-with-me
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=user
+spring.datasource.password=user
