--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "5433:5432"
     environment:
-      -POSTGRES_DB=ewmservice
+      POSTGRES_DB=ewmservice
       POSTGRES_USER: "user"
       POSTGRES_PASSWORD: "user"
 
