feature: prepare for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,5 @@ services:
       - POSTGRES_DB:stats-db
       - POSTGRES_USER:user
       - POSTGRES_PASSWORD:user
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+
