--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - POSTGRES_DB="ewmservice"
-      - POSTGRES_USER="user"
-      - POSTGRES_PASSWORD="user"
+      - POSTGRES_DB=ewmservice
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=user
 
   stats-server:
     build: ./stat-server
@@ -37,10 +37,10 @@ services:
     image: postgres:14-alpine
     container_name: stats-db
     ports:
-      - "5432:5432"
+      - "5434:5432"
     environment:
-      - POSTGRES_DB:stats-db
-      - POSTGRES_USER:user
-      - POSTGRES_PASSWORD:user
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - POSTGRES_DB=stats-db
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=user
+
 
