--- a/stat-server/src/main/resources/application.properties
+++ b/stat-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats-db
+spring.datasource.url=jdbc:postgresql://stats-db:5432/stats-db
 spring.datasource.username=user
 spring.datasource.password=user
 spring.sql.init.mode=always
