--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5433/ewmservice
 
   ewm-db:
     image: postgres:14-alpine
@@ -19,7 +19,7 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - DB_NAME=ewmservice
+      - POSTGRES_DB=ewmservice
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user
 
@@ -31,7 +31,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5434/stats-db
 
   stats-db:
     image: postgres:14-alpine
@@ -39,7 +39,7 @@ services:
     ports:
       - "5434:5432"
     environment:
-      - DB_NAME=stats-db
+      - POSTGRES_DB=stats-db
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user
 
