--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,9 @@ services:
     container_name: ewm-service
     ports:
       - "8080:8080"
-    depends_on:
-      - ewm-db
+#    depends_on:
+#      - ewm-db
+#      - stats-server
     environment:
       - STATISTIC_SERVER_URL=http://stats-server:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
@@ -27,8 +28,8 @@ services:
     container_name: stats-server
     ports:
       - "9090:9090"
-    depends_on:
-      - stats-db
+#    depends_on:
+#      - stats-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
 
