--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
 spring.datasource.password=user
+spring.datasource.username=user
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
@@ -17,8 +18,8 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:explore-with-me
-#spring.datasource.username=user
-#spring.datasource.password=user
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:explore-with-me
+spring.datasource.username=user
+spring.datasource.password=user
