--- a/stat-server/src/main/resources/application.properties
+++ b/stat-server/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.password=user
 spring.sql.init.mode=always
 server.port=9090
 #---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:explore
-#spring.datasource.username=user
-#spring.datasource.password=user
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:explore
+spring.datasource.username=user
+spring.datasource.password=user
