--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -8,15 +8,16 @@ spring.jpa.hibernate.show_sql=true
 
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
+#spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
 spring.datasource.password=user
 spring.datasource.username=user
 spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.transaction.interceptor=ERROR
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=ERROR
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
