--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmservice
 
   ewm-db:
-    image: postgres:14-alpine
+    image: postgis/postgis:14-3.3-alpine
     container_name: ewm-db
     ports:
       - "5433:5432"
