--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -3,9 +3,8 @@ statistic-server.url=http://localhost:9090
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
