--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 
-#spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
 spring.datasource.password=user
 spring.datasource.username=user
 spring.sql.init.mode=always
